# Lexi-Translation

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto_issue_labels.yml  bundle.yml  projectcard-autolabel.yml  release.yml
build-aux/flatpak/: io.github.dzheremi2.Lexi.yaml  io.github.dzheremi2.lexi.Devel.yaml  io.github.dzheremi2.lexi.yaml
data/: Lexi.gresource.xml.in  io.github.dzheremi2.Lexi.desktop.in  io.github.dzheremi2.Lexi.gschema.xml.in  io.github.dzheremi2.lexi.desktop.in  io.github.dzheremi2.lexi.gschema.xml.in  io.github.dzheremi2.lexi.metainfo.xml.in  meson.build
data/gtk/: window.blp
data/gtk/css/: style.css
data/gtk/ui/: CollectionRow.blp  LexiconRow.blp  PairRow.blp  Preferences.blp  ReferenceRow.blp  WordRow.blp  WordTypeRow.blp
docs/: CHANGELOG.md
docs/datadir/: collections.yaml  lexicons.yaml  some_dict.yaml
docs/datadir/some_hash/: collection.yaml  lexicon.yaml
docs/datadir/some_hash/some_amazing_name/: lexicon.yaml
lexi/: enums.py  lexi.in  main.py  meson.build  shared.py.in  shared.pyi  window.py  window.pyi
lexi/logging/: logger.py
lexi/ui/: CollectionRow.py  DictRows.py  IPA.py  Icon.py  LexiconRow.py  PairRow.py  Preferences.py  Preferences.pyi  ReferenceRow.py  TypeRow.py  WordRow.py  widgets.py  widgets.pyi
lexi/utils/: Controllers.py  backend.py  backup.py  backup.pyi  migrator.py  migrator.pyi  sort_filter.py
lexi/utils/migrator/: migrator.py
po/: LINGUAS  Lexi.pot  POTFILES.in  de.po  el.po  es.po  fi.po  fr.po  he.po  hu.po  id.po  is.po  it.po  jp.po  kab.po  ko.po  meson.build  no.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  ta.po  tr.po  ua.po  vi.po
